# dlp-agent

./: Cargo.toml
src/: agent_core.rs  capabilities.rs  communication.rs  config.rs  gui.rs  hi.html  lib.rs  main.rs  policy_constants.rs  policy_engine.rs
src/protection_modules/: file_protection.rs  hi.html  kisansamadhan.com_index.html  mod.rs  network_protection.rs  usb_protection.rs
