[package]
name = "dlp-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_Storage_FileSystem" ,
     "Win32_Foundation",
      "Win32_System_SystemServices" ,
      "Win32_System_Ioctl",      # <-- ADD THIS LINE
    "Win32_System_IO"   
] }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
whoami = "1.0"
rand = "0.8"
dialoguer = "0.10"
once_cell = "1.19"
[dev-dependencies]