[package]
name = "dlp-agent"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
whoami = "1.0"
rand = "0.8"
dialoguer = "0.10"
once_cell = "1.19"

# THIS IS THE FINAL, COMBINED DEPENDENCY BLOCK FOR ALL FEATURES
windows-sys = { version = "0.61.2", features = [
    # Core types & COM
    "Win32_Foundation",
    "Win32_System_Com",

    # For USB Protection
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_SystemServices",

    # For Network Protection (WFP)
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc"
] }

[dev-dependencies]